@@ -32,6 +32,7 @@ import io.trino.spi.function.table.ConnectorTableFunction;
 import net.snowflake.client.jdbc.SnowflakeDriver;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Properties;
 
@@ -63,18 +64,13 @@ public class SnowflakeClientModule
         snowflakeConfig.getRole().ifPresent(role -> properties.setProperty("role", role));
         snowflakeConfig.getWarehouse().ifPresent(warehouse -> properties.setProperty("warehouse", warehouse));
 
-        // Set the expected date/time formatting we expect for our plugin to parse
-        properties.setProperty("TIMESTAMP_OUTPUT_FORMAT", "YYYY-MM-DD\"T\"HH24:MI:SS.FF9TZH:TZM");
-        properties.setProperty("TIMESTAMP_NTZ_OUTPUT_FORMAT", "YYYY-MM-DD\"T\"HH24:MI:SS.FF9TZH:TZM");
-        properties.setProperty("TIMESTAMP_TZ_OUTPUT_FORMAT", "YYYY-MM-DD\"T\"HH24:MI:SS.FF9TZH:TZM");
-        properties.setProperty("TIMESTAMP_LTZ_OUTPUT_FORMAT", "YYYY-MM-DD\"T\"HH24:MI:SS.FF9TZH:TZM");
-        properties.setProperty("TIME_OUTPUT_FORMAT", "HH24:MI:SS.FF9");
+        setOutputProperties(properties);
 
         // Support for Corporate proxies
         if (snowflakeConfig.getHttpProxy().isPresent()) {
             String proxy = snowflakeConfig.getHttpProxy().get();
 
-            URL url = new URL(proxy);
+            URL url = URI.create(proxy).toURL();
 
             properties.setProperty("useProxy", "true");
             properties.setProperty("proxyHost", url.getHost());
@@ -98,5 +94,17 @@ public class SnowflakeClientModule
                 .setConnectionProperties(properties)
                 .setOpenTelemetry(openTelemetry)
                 .build();
+    }
+
+    protected static void setOutputProperties(Properties properties)
+    {
+        // Set the expected date/time formatting we expect for our plugin to parse
+        properties.setProperty("TIMESTAMP_OUTPUT_FORMAT", "YYYY-MM-DD\"T\"HH24:MI:SS.FF9TZH:TZM");
+        properties.setProperty("TIMESTAMP_NTZ_OUTPUT_FORMAT", "YYYY-MM-DD\"T\"HH24:MI:SS.FF9TZH:TZM");
+        properties.setProperty("TIMESTAMP_TZ_OUTPUT_FORMAT", "YYYY-MM-DD\"T\"HH24:MI:SS.FF9TZH:TZM");
+        properties.setProperty("TIMESTAMP_LTZ_OUTPUT_FORMAT", "YYYY-MM-DD\"T\"HH24:MI:SS.FF9TZH:TZM");
+        properties.setProperty("TIME_OUTPUT_FORMAT", "HH24:MI:SS.FF9");
+        // Don't treat decimals as bigints as they may overflow
+        properties.setProperty("JDBC_TREAT_DECIMAL_AS_INT", "FALSE");
     }
 }
